Bug 1020603 - Check table children for alternative frame types when mapping element. r=Jamie

If an HTML table's children (tr/thead/tfoot) are anything but row or row
group frames, our layout-based HTMLTableAccessible implementation won't work.

Differential Revision: https://phabricator.services.mozilla.com/D94888